# serialport_monitor

./: Cargo.toml  README.md
src/: args_parse.rs  key_listener.rs  main.rs  uart_readout.rs  utf8_buffer.rs
