[package]
name = "serialport_monitor"
version = "0.1.0"
authors = ["chenxuuu <lolicon@papapoi.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4"
time="0.3"
clap = { version = "3.0", features = ["derive"] }
